[gd_scene load_steps=4 format=3 uid="uid://tvooalqdnr6"]

[ext_resource type="FontFile" uid="uid://chqhsj6ixur4t" path="res://src/main/assets/texture/dogge/fonts/Xolonium-Regular.ttf" id="1_53xdy"]
[ext_resource type="Script" path="res://src/main/scene/level/dogge/hud.gd" id="1_fxxjg"]
[ext_resource type="FontFile" uid="uid://cbmw7emi6jok1" path="res://src/main/assets/texture/dogge/fonts/STLITI.TTF" id="2_0i3mj"]

[node name="HUD" type="Node2D"]
script = ExtResource("1_fxxjg")

[node name="Timer" type="Timer" parent="."]

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 479.0
offset_top = 11.0
offset_right = 524.0
offset_bottom = 92.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_53xdy")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1

[node name="InfoLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 330.0
offset_top = 250.0
offset_right = 680.0
offset_bottom = 328.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_0i3mj")
theme_override_font_sizes/font_size = 70
text = "躲避红眼怪"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 391.0
offset_top = 360.0
offset_right = 620.0
offset_bottom = 441.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_53xdy")
theme_override_font_sizes/font_size = 60
text = "START"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
